--- a/src/app/app.html
+++ b/src/app/app.html
@@ -337,5 +337,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-game-grid></app-game-grid>
 <router-outlet />
