add game starter form

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -336,6 +336,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-game-starter></app-game-starter>
 <app-game-grid></app-game-grid>
 <router-outlet />
