--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+.btn {
+    width: 100%;
+    padding: 5px;
+    background-color: transparent;
+    border: 1px solid #000;
+    border-radius: 5px;
+}
+
+.form {
+    &__input {
+        display: block;
+        width: 100%;
+        height: 35px;
+        padding: 3px 10px;
+        background-color: #fff;
+        border: 1px solid #555;
+        border-radius: 4px;
+
+        &:focus {
+            outline: none;
+        }
+
+        &--invalid {
+            border: 1px solid red;
+        }
+    }
+
+    &__error {
+        margin-top: 3px;
+        font-size: 13px;
+        color: red
+    }
+}
