create game servie, prepare base states, choose random cell logic

--- a/src/game-core/components/game-grid/game-grid.html
+++ b/src/game-core/components/game-grid/game-grid.html
@@ -2,8 +2,8 @@
     @for (row of gameGrid; track $index) {
         <div class="game-grid__row">
             @for (cell of row; track $index) {
-                <div class="game-grid__cell" (click)="handleClickOnCell()">
-                    {{cell}}
+                <div class="game-grid__cell" (click)="handleClickOnCell(cell)">
+                    
                 </div>
             }
         </div>
