--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
+ main {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: inherit;
+    position: relative;
+  }
+
 .btn {
     width: 100%;
     padding: 5px;
