--- a/src/game-core/components/game-grid/game-grid.html
+++ b/src/game-core/components/game-grid/game-grid.html
@@ -1,11 +1,12 @@
-<div class="game-grid">
+<div class="game-grid" [class.game-grid--disabled]="gameStatus === 'disabled'">
     @for (row of gameGrid; track $index) {
         <div class="game-grid__row">
             @for (cell of row; track $index) {
                 <div class="game-grid__cell"
                     [class.game-grid__cell--active]="cell.status === 'active'"
                     [class.game-grid__cell--failed]="cell.status === 'failed'"
-                    [class.game-grid__cell--success]="cell.status === 'success'"  
+                    [class.game-grid__cell--success]="cell.status === 'success'"
+                    [class.game-grid__cell--selected]="cell.id === selectedCellId"   
                     (click)="handleClickOnCell(cell)">
                 </div>
             }
