--- a/src/game-core/components/game-starter/game-starter.scss
+++ b/src/game-core/components/game-starter/game-starter.scss
@@ -1,5 +1,9 @@
 .game-starter {
     width: 200px;
+    padding: 15px;
+    margin-right: 20px;
+    border: 1px solid #555;
+    border-radius: 4px;
 }
 
 .game-starter-btn {
