--- a/src/game-core/components/game-score/game-score.scss
+++ b/src/game-core/components/game-score/game-score.scss
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 15px;
+    margin-left: 12px;
     color: #444;
 
     &__player {    
         display: flex;
         flex-direction: column;
         align-items: center;
+        min-width: 90px;
         font-size: 55px;
 
         &-name {
