--- a/src/game-core/components/game-starter/game-starter.html
+++ b/src/game-core/components/game-starter/game-starter.html
@@ -26,7 +26,7 @@
         </label>
         
         <button class="btn btn--sega" 
-                [disabled]="!gameStarterForm.valid || (gameStatus$ | async) === 'playing'">Start</button>
+                [disabled]="!gameStarterForm.valid || (gameStatus$ | async) === 'playing'">Play</button>
     </form>
     
 </div>
