--- a/src/game-core/components/game-starter/game-starter.scss
+++ b/src/game-core/components/game-starter/game-starter.scss
@@ -4,12 +4,10 @@
     margin-right: 20px;
     border: 1px solid #555;
     border-radius: 4px;
-}
 
-.game-starter-btn {
-    margin-top: 15px;
-    font-size: 14px;
-    text-transform: uppercase;
-    background-color: #5CE65C;
-    border: 1px solid #5CE65C
+    &__remark {
+        display: block;
+        margin-bottom: 5px;
+        font-size: 13px;
+    }
 }
