--- a/src/game-core/components/game-grid/game-grid.scss
+++ b/src/game-core/components/game-grid/game-grid.scss
@@ -15,7 +15,7 @@
         border-radius: 5px;
         will-change: rotate;
         transition: all .18s;
-        cursor: grab;
+        cursor: pointer;
         opacity: .95;
 
         &--active {
